# loom

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  reindex.yml  release.yml
docs/: app.js  browse.html  demo.tape  docs.html  index.html  release.md  search.js  skills.json  style.css  tutorial.html
scripts/: install.sh  package.sh
skills/: ab-testing.yml  ad-creative.yml  ads.yml  ai-seo.yml  algorithmic-art.yml  analytics.yml  angular-architect.yml  ansible.yml  api-and-interface-design.yml  api-designer.yml  architecture-designer.yml  ask-matt.yml  aso.yml  astro.yml  astropy.yml  atlassian-mcp.yml  aws-lambda.yml  banner-design.yml  biopython.yml  brainstorming.yml  brand-guidelines.yml  brand.yml  browser-testing-with-devtools.yml  canvas-design.yml  celery.yml  chaos-engineer.yml  churn-prevention.yml  ci-cd-and-automation.yml  cirq.yml  claude-api.yml  claude-handoff.yml  cli-developer.yml  cloud-architect.yml  co-marketing.yml  code-documenter.yml  code-review-and-quality.yml  code-review.yml  code-reviewer.yml  code-simplification.yml  codebase-design.yml  (+247 more)
src/: main.rs
src/cli/: mod.rs
src/commands/: agents.rs  doctor.rs  generate.rs  index.rs  info.rs  init.rs  install.rs  lint.rs  list.rs  mod.rs  new.rs  publish.rs  remove.rs  search.rs  test.rs  update.rs  upgrade.rs
src/config/: mod.rs
src/fetch/: mod.rs
src/generate/: mod.rs
src/install/: mod.rs
src/manifest/: mod.rs
src/output/: mod.rs
src/paths/: mod.rs
src/repo/: mod.rs
src/site/: mod.rs
