[package]
# `loom` is taken on crates.io by an unrelated concurrency-testing library, so
# the crate is published as `loom_ai`. The binary it installs is still `loom`.
name = "loom_ai"
version = "0.1.1"
edition = "2024"
description = "A package manager for AI skills (Claude Code, Codex, and friends)."
license = "MIT"
repository = "https://github.com/wess/loom"
homepage = "https://wess.io/loom"
readme = "README.md"
keywords = ["ai", "skills", "package-manager", "cli", "claude"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "loom"
path = "src/main.rs"

# Release archives are loom-<version>-<triple>.tar.gz with the binary inside a
# loom-<version>-<triple>/ directory (see scripts/package.sh).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/loom-{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "loom-{ version }-{ target }/{ bin }{ binary-ext }"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dialoguer = { version = "0.12.0", default-features = false, features = ["editor", "fuzzy-select"] }
dirs = "6.0.0"
flate2 = "1.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
sha2 = "0.11.0"
tar = "0.4.46"
terminal_size = "0.4.4"
ureq = "3.3.0"
walkdir = "2.5.0"
